UI updates, add Ubuntu bold to react PDF, fix readonly field on mobile

--- a/frontend/src/pages/Report/ReportPage.module.css
+++ b/frontend/src/pages/Report/ReportPage.module.css
@@ -66,7 +66,7 @@
 
 .infoTitle h3 {
     font-size: 1.4em;
-    font-weight: 500;
+    font-weight: 550;
     margin-bottom: 0.6em;
 }
 
@@ -87,7 +87,7 @@
 
 .documentInfo h3 {
     font-size: 1.4em;
-    font-weight: 500;
+    font-weight: 550;
     margin-bottom: 0.6em;
 }
 
