--- a/frontend/src/pages/Report/ReportPageMobile.module.css
+++ b/frontend/src/pages/Report/ReportPageMobile.module.css
@@ -64,6 +64,7 @@ h3 {
 
 .mailButton {
     padding: 0.75em;
+    margin-bottom: 5em;
     margin-top: 0.7em;
     border: none;
     border-radius: 0.4em;
